Se agrega footer

--- a/vida/html/Hoobies.html
+++ b/vida/html/Hoobies.html
@@ -80,8 +80,23 @@
                 </td>
             </tr>
         </table>
-
     </section>
+    <footer>
+        <div class="contenedor">
+            <h2 class="titulo-seccion">
+                Contactame
+            </h2>
+        </div>
+        <div class="redes-sociales">
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-youtube"></i>
+        </div>
+        <div class="contenedor">
+            <p class="copy">@2022 Andres Felipe Suarez / Todos los derechos son reservados</p>
+        </div>
+    </footer>
+    <script src="https://kit.fontawesome.com/bdbed0aafa.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
