--- a/vida/html/Mision-Vision.html
+++ b/vida/html/Mision-Vision.html
@@ -1,15 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/MISION Y VISION.css">
+    <title>Mi hoja de vida</title>
 </head>
-
 <body>
-
+    <nav>
+        <ul>
+            <li>
+                <a href="./Hoobies.html">Hoobies</a>
+            </li>
+            <li>
+                <a href="./Estudios.html">Vida Academica</a>
+            </li>
+            <li>
+                <a href="./Mision-Vision.html">Mision y Vision</a>
+            </li>
+        </ul>
+    </nav>
+    <header>
+        <h1 class="Titulo" id="Titulo">Mision Y Vision</h1>
+    </header>
+    <section>
+        <div>
+            <h2>Mis metas y futuros de corto y largo plazo </h2>
+        </div>
+    </section>
+    <section>
+        <table>
+            <tr>
+                <td>
+                   Mision
+                </td>
+                <td>
+                   Vision
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Mi mision es graduarme de once con honores y empezar a estudiar en la universidad con la carrera de ingeria de sistemas, una carrera que me gusta y me apaosiona 
+                </td>
+                <td>
+                    Mi vision es ser un profesional en el area de Ingeria de Sistemas y salir a conocer el mundo con mi familia ademas de disfrutar mi juventud
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="../img/mision.jpg" alt="">
+                </td>
+                <td>
+                    <img src="../img/high_performers_PDF_retreat_2.jpg" alt="Media">
+                </td>
+            </tr>
+    
+        </table>
 </body>
-
 </html>
